--- a/themes/oeilaubois/layouts/bois-de-lune/single.html
+++ b/themes/oeilaubois/layouts/bois-de-lune/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="container-fluid bg-dark_section">
+<section class="rg-bois-lune container-fluid bg-dark_section">
    <div class="row pt-5">
       <div class="col-12 justify-content-center text-center">
          <h1>{{ .Title }}</h1>
