--- a/themes/oeilaubois/layouts/index.html
+++ b/themes/oeilaubois/layouts/index.html
@@ -2,15 +2,12 @@
 <section class="rg-header container-fluid bg-dark_section">
     <div class="row">
         <div class="col text-md-center text-center">
-            <h1>L’œil au bois - ébénisterie</h1>
-            <h2>Romaric Gauthier</h2>
-            <h3>Réalisations et rénovations de meubles en bois dans le Jura</h3>
         </div>
     </div>
 </section>
 <section class="container-fluid bg-light_section">
     <div class="row">
-        <div class="col text-md-center text-center">
+        <div class="col-9 text-justify">
             <p>
                 « Après plusieurs années d’études en Sciences de la Vie et de la Terre, il ne fait aucun doute que la forêt est bien vivante : les arbres grandissent, communiquent entre eux, s’entraident, se reproduisent et meurent. C’est en découvrant les particularités des arbres que j’ai décidé de m’intéresser à l’ébénisterie.
             </p>
@@ -23,6 +20,15 @@
             <p>
                 Chacune de ces essences de bois présente des qualités olfactives, textuelles et visuelles particulières. Les techniques d’ébéniste que j’utilise pour les travailler ne sont pas nouvelles, tenons, mortaises, feuillures, collages… mais elles se sont modernisés avec le temps. »
             </p>
+        </div>
+        <div class="col-3">
+            <img class="portrait" src="img/romaric-atelier-1.jpg" alt="Romaric">
+        </div>
+    </div>
+</section>
+<section class="rg-header-2 container-fluid bg-dark_section">
+    <div class="row">
+        <div class="col text-md-center text-center">
         </div>
     </div>
 </section>
