--- a/themes/oeilaubois/layouts/bois-de-lune/single.html
+++ b/themes/oeilaubois/layouts/bois-de-lune/single.html
@@ -9,7 +9,7 @@
 
 <section class="container-fluid bg-light">
    <div class="row justify-content-center">
-      <div class="col-9">
+      <div class="col-9 text-justify">
          {{ .Content }}
       </div>
       <div class="col-3">
