--- a/themes/oeilaubois/layouts/index.html
+++ b/themes/oeilaubois/layouts/index.html
@@ -5,7 +5,7 @@
         </div>
     </div>
 </section>
-<section class="container-fluid bg-light_section">
+<section class="container-fluid bg-light">
     <div class="row">
         <div class="col-9 text-justify">
             <p>
