--- a/themes/oeilaubois/layouts/realisations/single.html
+++ b/themes/oeilaubois/layouts/realisations/single.html
@@ -9,7 +9,7 @@
 
 <section class="container-fluid bg-light">
    <div class="row justify-content-center">
-      <div class="col-10 text-md-left text-left">
+      <div class="col-10 text-md-left text-left text-justify">
          {{ .Content }}
       </div>
    </div>
