feat: update july 2021

--- a/themes/oeilaubois/layouts/bois-utilises/single.html
+++ b/themes/oeilaubois/layouts/bois-utilises/single.html
@@ -9,12 +9,12 @@
 
 <section class="container-fluid bg-light">
    <div class="row justify-content-center">
-      <div class="col-9 text-justify">
+      <div class="col-12 text-justify">
          {{ .Content }}
       </div>
-      <div class="col-3">
+      <!-- <div class="col-3">
             <img class="moon-hood" title="{{ .Params.title }}" src="{{ .Params.image }}" />
-      </div>
+      </div> -->
    </div>
 </section>
 
@@ -24,10 +24,10 @@
           <blockquote>
               <p>”Il n'y a point de recette pour embellir la nature. Il ne s'agit que de voir.”</p>
               <br>
-          </blockquote>  
+          </blockquote>
           <cite><span>Auguste Rodin</span>
           </cite>
       </div>
-  </div>    
+  </div>
 </section>
 {{ end }}
