--- a/themes/oeilaubois/layouts/partials/top-menu.html
+++ b/themes/oeilaubois/layouts/partials/top-menu.html
@@ -15,7 +15,7 @@
                     <a class="nav-link ml-1 ml-md-3" href="/">Accueil</a>
                 </li>
                 <li class="nav-item dropdown position-static">
-                    <a class="nav-link ml-1 ml-md-3" href="/bois-de-lune/">Bois de lune</a>
+                    <a class="nav-link ml-1 ml-md-3" href="/bois-utilises/">Les bois utilisés à l’atelier </a>
                 </li>
                 <li class="nav-item dropdown position-static">
                     <a class="nav-link ml-1 ml-md-3" href="/realisations/">Réalisations et Rénovations</a>
