--- a/themes/oeilaubois/layouts/bois-utilises/single.html
+++ b/themes/oeilaubois/layouts/bois-utilises/single.html
@@ -29,5 +29,7 @@
           </cite>
       </div>
   </div>
+  <p align="center"><img src="/img/artisan-art.png" id="artisan-art" alt="Artisan d'art" title="Artisan d'art" /></p>
 </section>
+
 {{ end }}
