--- a/themes/oeilaubois/layouts/contact/single.html
+++ b/themes/oeilaubois/layouts/contact/single.html
@@ -19,10 +19,11 @@
    <div class="row justify-content-center">
       <div class="col-4 text-md-center text-center">
          <p>125 Rue chateraine 39210 MONTAIN</p>
-         <p>Tel: <b><a href="tel:+33679493468">06 79 49 34 68</a></b></p>
+         <p>Tel: <b><a href="tel:+33775718886">07 75 71 88 86</a></b></p>
          <p>Email: <b><a href="mailto:oeilaubois@gmail.com">oeilaubois@gmail.com</a></b></p>
          <a class="social-network ml-1 ml-md-3" target="_blank" href="https://www.instagram.com/oeilaubois/"><i class="fab fa-instagram"></i></a>
-         <a class="social-network ml-1 ml-md-3" target="_blank" href="https://www.facebook.com/oeilaubois/"><i class="fab fa-facebook"></i></a>       
+         <a class="social-network ml-1 ml-md-3" target="_blank" href="https://www.facebook.com/oeilaubois/"><i class="fab fa-facebook"></i></a>
+         <p><img src="/img/artisan-art.png" id="artisan-art" alt="Artisan d'art" title="Artisan d'art" /></p>
       </div>
       <div class="col-8 text-md-center text-center">
          <div id="map"></div>
