--- a/themes/oeilaubois/layouts/index.html
+++ b/themes/oeilaubois/layouts/index.html
@@ -20,9 +20,11 @@
             <p>
                 Chacune de ces essences de bois présente des qualités olfactives, textuelles et visuelles particulières. Les techniques d’ébéniste que j’utilise pour les travailler ne sont pas nouvelles, tenons, mortaises, feuillures, collages… mais elles se sont modernisés avec le temps. »
             </p>
+            <p align="center"><img src="/img/artisan-art.png" id="artisan-art" alt="Artisan d'art" title="Artisan d'art" /></p>
         </div>
         <div class="col-3">
-            <img class="portrait" src="img/romaric-atelier-1.jpg" alt="Romaric">
+            <img class="portrait" src="img/herbier.jpg" alt="Romaric">
+<!--            <img class="portrait" src="img/romaric-atelier-1.jpg" alt="Romaric">-->
         </div>
     </div>
 </section>
